<resources>
    <string name="app_name">FirstApp</string>
    <string name="hello" translatable="false">Hello!</string>
    <string name="str" translatable="false">Happy Birthday !</string>
    <string name="name" translatable="false">Your Jayrie</string>
    <string name="bg" translatable="false">background</string>
    <string name="Celsius">Celsius：</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="str1" translatable="false">￣￣￣￣￣￣￣￣￣￣￣</string>
    <string name="textinput" translatable="false">Please input Fahrenheit</string>
    <string name="str2" translatable="false">Convert</string>
    <string name="textInitial_rate" translatable="false">0.0</string>
    <string name="hint_rate">Please input RMB</string>
    <string name="yen" translatable="false">yen</string>
    <string name="dollar">dollar</string>
    <string name="euro">euro</string>
    <string name="won">won</string>
    <string name="config">config</string>
    <string name="save">save</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_first">First Page</string>
    <string name="label_second">Second Page</string>
    <string name="label_third">Third Page</string>
</resources>
