<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TempActivity">

    <TextView
        android:id="@+id/textC"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_marginTop="100dp"
        android:gravity="bottom"
        android:text="@string/Celsius"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end|top"
        android:text="@string/str1"
        android:textColor="#F7181717"
        android:layout_marginBottom="60dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/textinput"
        android:inputType="numberSigned|number|numberDecimal"
        android:textSize="20sp" />

    <Button
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/str2"
        android:textSize="24sp" />

</LinearLayout>